--- a/2. Backprop_in_neural_network.ipynb
+++ b/2. Backprop_in_neural_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuXTl8wzhqD3ohqnNjdDsF",
+      "authorship_tag": "ABX9TyPfJt8qX04nhLPq6n1YRt++",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -425,6 +425,327 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Role of Matrices in Backpropagation\n",
+        "\n",
+        "Previously, we didn't have matrices, so we needed to write the partial derivative of the loss with respect to each weight individually for a single example. For instance, for a layer with 4 inputs and (implied) multiple neurons, we would compute:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{11}}, \\frac{\\delta L}{\\delta w_{12}}, \\frac{\\delta L}{\\delta w_{13}}, \\dots \\text{ and so on}\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{21}}, \\frac{\\delta L}{\\delta w_{22}}, \\dots\n",
+        "$$\n",
+        "\n",
+        "For a single neuron example (say the first neuron):\n",
+        "\n",
+        "$$\n",
+        "z^1 = w_{11} x_1 + w_{12} x_2 + w_{13} x_3 + w_{14} x_4 + b_1\n",
+        "$$\n",
+        "\n",
+        "The partial derivative using the chain rule is:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{11}} = \\frac{\\delta L}{\\delta z^1} \\times \\frac{\\delta z^1}{\\delta w_{11}} = \\frac{\\delta L}{\\delta z^1} \\times x_1\n",
+        "$$\n",
+        "\n",
+        "(since $\\frac{\\delta z^1}{\\delta w_{11}} = x_1$).\n",
+        "\n",
+        "Similarly for others:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{12}} = \\frac{\\delta L}{\\delta z^1} \\times x_2\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{13}} = \\frac{\\delta L}{\\delta z^1} \\times x_3\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{14}} = \\frac{\\delta L}{\\delta z^1} \\times x_4\n",
+        "$$\n",
+        "\n",
+        "Note that $\\frac{\\delta z^1}{\\delta w_{11}}$ is always $x_1$, and so on for the others.\n",
+        "\n",
+        "With multiple neurons (say 3 neurons), we can use matrices to compute all gradients at once. Let:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta z} = \\left[ \\frac{\\delta L}{\\delta z^1}, \\frac{\\delta L}{\\delta z^2}, \\frac{\\delta L}{\\delta z^3} \\right] \\quad (1 \\times 3)\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "X^T = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4 \\end{bmatrix} \\quad (4 \\times 1)\n",
+        "$$\n",
+        "\n",
+        "## Partial Derivative of Loss w.r.t. Weight Matrix\n",
+        "\n",
+        "The matrix form for the weight gradients is the outer product:\n",
+        "\n",
+        "$$\n",
+        "X^T \\cdot \\frac{\\delta L}{\\delta z} = \\begin{bmatrix}\n",
+        "x_1 \\times \\frac{\\delta L}{\\delta z^1} & x_1 \\times \\frac{\\delta L}{\\delta z^2} & x_1 \\times \\frac{\\delta L}{\\delta z^3} \\\\\n",
+        "x_2 \\times \\frac{\\delta L}{\\delta z^1} & x_2 \\times \\frac{\\delta L}{\\delta z^2} & x_2 \\times \\frac{\\delta L}{\\delta z^3} \\\\\n",
+        "x_3 \\times \\frac{\\delta L}{\\delta z^1} & x_3 \\times \\frac{\\delta L}{\\delta z^2} & x_3 \\times \\frac{\\delta L}{\\delta z^3} \\\\\n",
+        "x_4 \\times \\frac{\\delta L}{\\delta z^1} & x_4 \\times \\frac{\\delta L}{\\delta z^2} & x_4 \\times \\frac{\\delta L}{\\delta z^3}\n",
+        "\\end{bmatrix} \\quad (4 \\times 3)\n",
+        "$$\n",
+        "\n",
+        "This equals the gradient matrix:\n",
+        "\n",
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "\\frac{\\delta L}{\\delta w_{11}} & \\frac{\\delta L}{\\delta w_{12}} & \\frac{\\delta L}{\\delta w_{13}} \\\\\n",
+        "\\frac{\\delta L}{\\delta w_{21}} & \\frac{\\delta L}{\\delta w_{22}} & \\frac{\\delta L}{\\delta w_{23}} \\\\\n",
+        "\\frac{\\delta L}{\\delta w_{31}} & \\frac{\\delta L}{\\delta w_{32}} & \\frac{\\delta L}{\\delta w_{33}} \\\\\n",
+        "\\frac{\\delta L}{\\delta w_{41}} & \\frac{\\delta L}{\\delta w_{42}} & \\frac{\\delta L}{\\delta w_{43}}\n",
+        "\\end{bmatrix} \\quad (4 \\times 3)\n",
+        "$$\n",
+        "\n",
+        "For biases:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta b_1} = \\frac{\\delta L}{\\delta z^1} \\times \\frac{\\delta z^1}{\\delta b_1}\n",
+        "$$\n",
+        "\n",
+        "We know $\\frac{\\delta z^1}{\\delta b_1} = 1$ (always).\n",
+        "\n",
+        "So:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta b_1} = \\frac{\\delta L}{\\delta z^1}\n",
+        "$$\n",
+        "\n",
+        "Similarly for other biases. The bias gradient matrix is simply:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta z} = \\left[ \\frac{\\delta L}{\\delta z^1}, \\frac{\\delta L}{\\delta z^2}, \\frac{\\delta L}{\\delta z^3} \\right]\n",
+        "$$\n",
+        "\n",
+        "## Handling Mini-Batches\n",
+        "\n",
+        "Now, let's consider a mini-batch of size 3. The inputs are:\n",
+        "\n",
+        "1st batch: $\\begin{bmatrix} 1 \\\\ 2 \\\\ 3 \\\\ -1.5 \\end{bmatrix}$\n",
+        "\n",
+        "2nd batch: $\\begin{bmatrix} 2 \\\\ 5 \\\\ -1 \\\\ 2 \\end{bmatrix}$\n",
+        "\n",
+        "3rd batch: $\\begin{bmatrix} 1.5 \\\\ 2.4 \\\\ 3.3 \\\\ 2.6 \\end{bmatrix}$\n",
+        "\n",
+        "So the input matrix X (features × batch size):\n",
+        "\n",
+        "$$\n",
+        "X = \\begin{bmatrix}\n",
+        "1 & 2 & 1.5 \\\\\n",
+        "2 & 5 & 2.4 \\\\\n",
+        "3 & -1 & 3.3 \\\\\n",
+        "-1.5 & 2 & 2.6\n",
+        "\\end{bmatrix} \\quad (4 \\times 3)\n",
+        "$$\n",
+        "\n",
+        "Assume example $\\frac{\\delta L}{\\delta z}$ for each batch (using simplified values from notes; note that actual values may vary slightly due to handwriting, but the principle remains):\n",
+        "\n",
+        "1st batch: $\\begin{bmatrix} 1 \\\\ 0.5 \\\\ 0.333 \\end{bmatrix}$ (approx. 1/3 ≈ 0.333)\n",
+        "\n",
+        "2nd batch: $\\begin{bmatrix} 2 \\\\ 0.667 \\\\ 1 \\end{bmatrix}$ (2/3 ≈ 0.667, 3/3 = 1)\n",
+        "\n",
+        "3rd batch: Assume $\\begin{bmatrix} 3 \\\\ 1.5 \\\\ 3 \\end{bmatrix}$ (for illustration, to show the sum; adjust if needed)\n",
+        "\n",
+        "The total loss L = L1 + L2 + L3 (sum of individual losses, not averaged here for simplicity; in practice, often average for mean loss).\n",
+        "\n",
+        "For weights, the total gradient is the sum over batches:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{ij}} = \\sum_{b=1}^{3} \\frac{\\delta L_b}{\\delta w_{ij}} = \\sum_{b=1}^{3} \\left( \\frac{\\delta L_b}{\\delta z^j_b} \\times x_{i b} \\right)\n",
+        "$$\n",
+        "\n",
+        "This can be computed as the sum of outer products over batches.\n",
+        "\n",
+        "Similarly:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{11}} = \\frac{\\delta L_1}{\\delta z^1_1} \\times x_{11} + \\frac{\\delta L_2}{\\delta z^1_2} \\times x_{12} + \\frac{\\delta L_3}{\\delta z^1_3} \\times x_{13}\n",
+        "$$\n",
+        "\n",
+        "And so on for other weights.\n",
+        "\n",
+        "Note some terms may be positive or negative depending on inputs and gradients.\n",
+        "\n",
+        "For example, similar expressions for $\\frac{\\delta L}{\\delta w_{21}}$, etc.\n",
+        "\n",
+        "Note:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta w_{11}} = \\frac{\\delta L}{\\delta w_{11}}, \\quad \\frac{\\delta L}{\\delta w_{12}} = \\frac{\\delta L}{\\delta w_{12}} = -\\frac{\\delta L}{\\delta w_{12}} \\quad (\\text{example of signs})\n",
+        "$$\n",
+        "\n",
+        "The update rule for weights and biases would be:\n",
+        "\n",
+        "w_new = w_old - learning_rate * gradient\n",
+        "\n",
+        "But here we focus on computing the gradients.\n",
+        "\n",
+        "For biases in batch:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta b_j} = \\sum_{b=1}^{3} \\frac{\\delta L_b}{\\delta z^j_b}\n",
+        "$$\n",
+        "\n",
+        "## Example Gradient Matrices\n",
+        "\n",
+        "In a computed example (from notes, with possible rounding):\n",
+        "\n",
+        "Weight gradient matrix:\n",
+        "\n",
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "0.5 & 0.5 & 0.5 \\\\\n",
+        "2.1 & 2.1 & 2.1 \\\\\n",
+        "10.9 & 10.9 & 10.9 \\\\\n",
+        "4.1 & 4.1 & 4.1\n",
+        "\\end{bmatrix}\n",
+        "$$\n",
+        "\n",
+        "Labeled as weights for 1st neuron (w11, w21, w31, w41), 2nd neuron (w12, w22, w32, w42), 3rd neuron (w13, w23, w33, w43).\n",
+        "\n",
+        "Bias gradient matrix:\n",
+        "\n",
+        "$$\n",
+        "[6, 6, 6]\n",
+        "$$\n",
+        "\n",
+        "This illustrates how, if the backpropagated gradients $\\frac{\\delta L}{\\delta z^j}$ sum to the same value across neurons, the weight gradient columns become identical.\n",
+        "\n",
+        "In code, you can implement this using NumPy for matrix operations in Google Colab, e.g., using `np.outer` for single examples or loops/sums for batches. If using mean loss, divide the gradients by batch size."
+      ],
+      "metadata": {
+        "id": "97G3mU5OWyUa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Gradient of Loss with Respect to Inputs\n",
+        "The notes discuss computing the gradient of the loss with respect to the inputs in a neural network layer, using matrix notation for efficiency.\n",
+        "## Weight and Bias Definitions\n",
+        "The weight matrix for the layer (assuming 3 neurons and 4 inputs) is defined row-wise for each neuron:\n",
+        "$$\n",
+        "W_1 = \\begin{bmatrix} 0.1 & 0.2 & 0.3 & 0.4 \\end{bmatrix} \\quad (w_{11}, w_{12}, w_{13}, w_{14})\n",
+        "$$\n",
+        "$$\n",
+        "W_2 = \\begin{bmatrix} 0.5 & 0.6 & 0.7 & 0.8 \\end{bmatrix} \\quad (w_{21}, w_{22}, w_{23}, w_{24})\n",
+        "$$\n",
+        "$$\n",
+        "W_3 = \\begin{bmatrix} 0.9 & 1 & 1.1 & 1.2 \\end{bmatrix} \\quad (w_{31}, w_{32}, w_{33}, w_{34})\n",
+        "$$\n",
+        "Biases:\n",
+        "$$\n",
+        "b_1 = 0.1, \\quad b_2 = 0.2, \\quad b_3 = 0.3\n",
+        "$$\n",
+        "Inputs:\n",
+        "$$\n",
+        "x_1 = 1, \\quad x_2 = 2, \\quad x_3 = 3, \\quad x_4 = 4\n",
+        "$$\n",
+        "## Forward Pass Computations\n",
+        "Pre-activations (z) and activations (a) using ReLU:\n",
+        "$$\n",
+        "a_1 = \\operatorname{ReLU}(w_{11} x_1 + w_{12} x_2 + w_{13} x_3 + w_{14} x_4 + b_1)\n",
+        "$$\n",
+        "$$\n",
+        "a_2 = \\operatorname{ReLU}(w_{21} x_1 + w_{22} x_2 + w_{23} x_3 + w_{24} x_4 + b_2)\n",
+        "$$\n",
+        "$$\n",
+        "a_3 = \\operatorname{ReLU}(w_{31} x_1 + w_{32} x_2 + w_{33} x_3 + w_{34} x_4 + b_3)\n",
+        "$$\n",
+        "Example forward pass values (assuming a simple sum and squared loss for illustration):\n",
+        "$$\n",
+        "z_1 = 3, \\quad z_2 = 7.2, \\quad z_3 = 11.4\n",
+        "$$\n",
+        "$$\n",
+        "a_1 = 3, \\quad a_2 = 7.2, \\quad a_3 = 11.4 \\quad (\\text{since all positive, ReLU(z) = z})\n",
+        "$$\n",
+        "$$\n",
+        "y = a_1 + a_2 + a_3 = 21.6\n",
+        "$$\n",
+        "$$\n",
+        "L = y^2\n",
+        "$$\n",
+        "## Backward Pass: Gradients with Respect to Inputs\n",
+        "We need to compute:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_1}, \\frac{\\delta L}{\\delta x_2}, \\frac{\\delta L}{\\delta x_3}, \\frac{\\delta L}{\\delta x_4}\n",
+        "$$\n",
+        "Using the chain rule:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_1} = \\frac{\\delta L}{\\delta a_1} \\times \\frac{\\delta a_1}{\\delta x_1} + \\frac{\\delta L}{\\delta a_2} \\times \\frac{\\delta a_2}{\\delta x_1} + \\frac{\\delta L}{\\delta a_3} \\times \\frac{\\delta a_3}{\\delta x_1}\n",
+        "$$\n",
+        "For ReLU, $\\frac{\\delta a_i}{\\delta x_j} = w_{ij} \\times \\mathbb{1}(z_i > 0)$ (assuming all z > 0, so indicator is 1).\n",
+        "In the notes, $\\frac{\\delta L}{\\delta a_i} = 2y$ for this loss (since $\\frac{\\delta L}{\\delta y} = 2y$, and y is sum of a's, so each $\\frac{\\delta y}{\\delta a_i} = 1$).\n",
+        "Thus:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta a_1} = 2y = 43.2\n",
+        "$$\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_1} = 43.2 \\times (0.1 + 0.5 + 0.9) = 43.2 \\times 1.5 = 64.8\n",
+        "$$\n",
+        "Similarly:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_2} = 43.2 \\times (0.2 + 0.6 + 1) = 43.2 \\times 1.8 = 77.76\n",
+        "$$\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_3} = 43.2 \\times (0.3 + 0.7 + 1.1) = 43.2 \\times 2.1 = 90.72\n",
+        "$$\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_4} = 43.2 \\times (0.4 + 0.8 + 1.2) = 43.2 \\times 2.4 = 103.68\n",
+        "$$\n",
+        "## Matrix Representation\n",
+        "We know $\\frac{\\delta L}{\\delta \\text{weights}} = X^T \\frac{\\delta L}{\\delta z}$, but for inputs:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta x_1} = \\frac{\\delta L}{\\delta z_1} w_{11} + \\frac{\\delta L}{\\delta z_2} w_{21} + \\frac{\\delta L}{\\delta z_3} w_{31}\n",
+        "$$\n",
+        "In matrix form (assuming W is 3x4, rows=neurons, columns=inputs):\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta X} = W^T \\frac{\\delta L}{\\delta z}\n",
+        "$$\n",
+        "Where $\\frac{\\delta L}{\\delta z} = \\left[ \\frac{\\delta L}{\\delta z_1}, \\frac{\\delta L}{\\delta z_2}, \\frac{\\delta L}{\\delta z_3} \\right]^T$ (column vector).\n",
+        "The weight matrix W:\n",
+        "$$\n",
+        "W = \\begin{bmatrix}\n",
+        "w_{11} & w_{12} & w_{13} & w_{14} \\\\\n",
+        "w_{21} & w_{22} & w_{23} & w_{24} \\\\\n",
+        "w_{31} & w_{32} & w_{33} & w_{34}\n",
+        "\\end{bmatrix} \\quad (3 \\times 4)\n",
+        "$$\n",
+        "Transpose:\n",
+        "$$\n",
+        "W^T = \\begin{bmatrix}\n",
+        "w_{11} & w_{21} & w_{31} \\\\\n",
+        "w_{12} & w_{22} & w_{32} \\\\\n",
+        "w_{13} & w_{23} & w_{33} \\\\\n",
+        "w_{14} & w_{24} & w_{34}\n",
+        "\\end{bmatrix} \\quad (4 \\times 3)\n",
+        "$$\n",
+        "## Handling Batches\n",
+        "For a batch of input data, the gradient with respect to inputs is:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta X} = \\frac{\\delta L}{\\delta z} W^T\n",
+        "$$\n",
+        "Where X is now a matrix (inputs × batch size), but for gradients, it's the matrix multiplication as shown.\n",
+        "Example batch dL/dz:\n",
+        "1st input batch: $\\begin{bmatrix} 1 \\\\ 1/2 \\\\ 1/3 \\end{bmatrix}$\n",
+        "Then computes numerical gradients for batch:\n",
+        "$$\n",
+        "\\frac{\\delta L}{\\delta \\text{input}} = \\begin{bmatrix} 0.44 & -0.38 & -0.07 & 1.27 \\\\ 0.66 & -0.76 & -0.14 & 2.74 \\\\ 1.32 & -1.14 & -0.21 & 4.11 \\end{bmatrix}^T \\quad (\\text{transposed for display})\n",
+        "$$\n",
+        "The notes question if this works for batches and provides an example weight transpose and computation.\n",
+        "In code, this can be implemented using NumPy matrix operations, e.g., `dL_dX = np.dot(W.T, dL_dz)` for single examples or appropriately for batches (where dL_dz would be neurons × batch size)."
+      ],
+      "metadata": {
+        "id": "U5YWafx4Y1pz"
+      }
     }
   ]
 }
