--- a/2. Backprop_in_neural_network.ipynb
+++ b/2. Backprop_in_neural_network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuJNddNexhZsV4DZQpxT9I",
+      "authorship_tag": "ABX9TyNxQcA099fxqNf7fV8KGwIx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -578,8 +578,15 @@
         "\n",
         "$$\n",
         "X^T = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4 \\end{bmatrix} \\quad (4 \\times 1)\n",
-        "$$\n",
-        "\n",
+        "$$\n"
+      ],
+      "metadata": {
+        "id": "wXmTbPS6C3ou"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Partial Derivative of Loss w.r.t. Weight Matrix\n",
         "\n",
         "The matrix form for the weight gradients is the outer product:\n",
@@ -727,6 +734,104 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "> Gradient of loss with respect to weights\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YV1l-b2X-Awj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Passed-in gradient from the next layer\n",
+        "dvalues = np.array([[1., 1., 1.],    #This is value of dL_dz matrix\n",
+        "                    [2., 2., 2.],\n",
+        "                    [3., 3., 3.]])\n",
+        "\n",
+        "# We have 3 sets of inputs - samples\n",
+        "inputs = np.array([[1, 2, 3, 2.5],\n",
+        "                   [2., 5., -1., 2],\n",
+        "                   [-1.5, 2.7, 3.3, -0.8]])\n",
+        "\n",
+        "dweights = np.dot(inputs.T, dvalues)\n",
+        "print(dweights)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VlRSjflP9qDM",
+        "outputId": "a6364c81-c68d-4f75-a45a-6cc709ef4235",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.5  0.5  0.5]\n",
+            " [20.1 20.1 20.1]\n",
+            " [10.9 10.9 10.9]\n",
+            " [ 4.1  4.1  4.1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Gradient of loss with respect to bias\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "upYDoMJs_cVk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Passed-in gradient from the next layer\n",
+        "dvalues = np.array([[1., 1., 1.],    #This is value of dL_dz matrix\n",
+        "                    [2., 2., 2.],\n",
+        "                    [3., 3., 3.]])\n",
+        "\n",
+        "# One bias for each neuron, biases are the row vector with a shape (1, neurons)\n",
+        "biases = np.array([[2, 3, 0.5]])\n",
+        "\n",
+        "dbiases = np.sum(dvalues, axis=0, keepdims=True)\n",
+        "print(dbiases)\n"
+      ],
+      "metadata": {
+        "id": "gQ8O-VVG_cu8",
+        "outputId": "bb99cdcc-36f1-4598-ed67-47c5a31de599",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6. 6. 6.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Gradient of Loss with Respect to Inputs\n",
         "The notes discuss computing the gradient of the loss with respect to the inputs in a neural network layer, using matrix notation for efficiency.\n",
         "## Weight and Bias Definitions\n",
@@ -845,6 +950,114 @@
       "metadata": {
         "id": "U5YWafx4Y1pz"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "> Gradient of loss with respect to inputs\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5rssi0v-AEBa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Passed-in gradient from the next layer\n",
+        "dvalues = np.array([[1., 1., 1.],    #This is value of dL_dz matrix\n",
+        "                    [2., 2., 2.],\n",
+        "                    [3., 3., 3.]])\n",
+        "\n",
+        "# We have 3 sets of weights< one set for each neuron. We have 4 inputs, thus 4 weights\n",
+        "weights = np.array([[0.2, 0.8, -0.5, 1],\n",
+        "                    [0.5, -0.91, 0.26, -0.5],\n",
+        "                    [-0.26, -0.27, 0.17, 0.87]]).T\n",
+        "\n",
+        "dinputs = np.dot(dvalues, weights.T)\n",
+        "print(dinputs)"
+      ],
+      "metadata": {
+        "id": "OyMaepSnAItS",
+        "outputId": "da2764a6-f0b3-467b-a8b1-ab2a716186d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0.44 -0.38 -0.07  1.37]\n",
+            " [ 0.88 -0.76 -0.14  2.74]\n",
+            " [ 1.32 -1.14 -0.21  4.11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Adding backward method in Layer-Dense class"
+      ],
+      "metadata": {
+        "id": "UU-jFbgqDJ9j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Layer_Dense:\n",
+        "#... Other code(Written previously in Forward Pass(File 1))\n",
+        "\n",
+        "  def backward(self, dvalues):\n",
+        "    #Gradients on parameters\n",
+        "    self.dweights = np.dot(self.inputs.T, dvalues)\n",
+        "    self.dbiases = np.sum(dvalues, axis=0, keepdims=True)\n",
+        "    #Gradient on values\n",
+        "    self.dinputs = np.dot(dvalues, self.weights.T)"
+      ],
+      "metadata": {
+        "id": "xqAcH68NDeUd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Adding backward method in ReLU activation class"
+      ],
+      "metadata": {
+        "id": "e6jCAyxVO8rE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Activation_ReLU:\n",
+        "  #Forward pass\n",
+        "  def forward(self, inputs):\n",
+        "    self.inputs = inputs\n",
+        "    self.output = np.maximum(0, inputs)\n",
+        "\n",
+        "  #Backward pass\n",
+        "  def backward(self, dvalues):\n",
+        "    self.dinputs = dvalues.copy()\n",
+        "    #Zero gradient where input values were negative\n",
+        "    self.dinputs[self.inputs <= 0] = 0"
+      ],
+      "metadata": {
+        "id": "QLouT2wPPGrc"
+      },
+      "execution_count": 5,
+      "outputs": []
     }
   ]
 }
